# books_library

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml
books_library/core/: settings.py
src/: .env
src/apps/account/: forms.py  urls.py  views.py
src/apps/account/fixtures/: example_data.json  test_data.json
src/apps/account/templates/account/: account.html  login.html  registration.html
src/apps/statistic/: forms.py  urls.py  utils.py  views.py
src/apps/statistic/templates/statistic/: authors_statistic.html  books_read_statistic.html  fig_genres_statistic.html  general_statistics.html  genres_statistic.html  statistic.html
src/apps/statistic/utils/: __init__.py  authors.py  books_read.py  general.py  generic.py  genres.py
src/apps/user/: models.py
src/core/: settings.py  urls.py  views.py
src/core/templates/core/: base.html
src/static/css/: base.css
src/templates/: base.html
src/utils/: utils.py
src/utils/orm/: __init__.py  utils.py
src/utils/tests/: utils.py
