[tool.poetry]
name = "books-library"
version = "0.1.0"
description = ""
authors = ["ArtemSerdechnyi <artem.serdechnyy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
